SeeSpotHelp/SeeSpotHelp/public/Content/site.css
h1 {
    font-size: 15px;
    text-align: center;
    font-weight: bold;
    margin: 2px;
    letter-spacing: 1px;
}

h2 {
    font-size: 12px;
    text-align: center;
    margin: 2px;
    letter-spacing: 1px;
}

p {
    font-size: 12px;
    letter-spacing: 1px;
}

.selectList {
    margin: 5px;
    padding: 5px;
    width: 100%;
    max-width: 200px;
}

.membershipRevokedStyle {
    background-color: lightgray;
    color: darkgray;
}

.animalListElement {
    padding: 10px;
    margin: 10px;

    /* for a drop shadow: */
    -webkit-box-shadow: 5px 5px 7px 2px rgba(153,153,153,0.63);
    -moz-box-shadow: 5px 5px 7px 2px rgba(153,153,153,0.63);
    box-shadow: 5px 5px 7px 2px rgba(153,153,153,0.63);

    background-color: #e5fbff;
    /* for a gradient: */
    /*
    background: rgba(255,255,255,1);
    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(232,244,247,1) 0%, rgba(153,227,247,1) 92%, rgba(153,227,247,1) 100%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(0%, rgba(232,244,247,1)), color-stop(92%, rgba(153,227,247,1)), color-stop(100%, rgba(153,227,247,1)));
    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(232,244,247,1) 0%, rgba(153,227,247,1) 92%, rgba(153,227,247,1) 100%);
    background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(232,244,247,1) 0%, rgba(153,227,247,1) 92%, rgba(153,227,247,1) 100%);
    background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(232,244,247,1) 0%, rgba(153,227,247,1) 92%, rgba(153,227,247,1) 100%);
    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(232,244,247,1) 0%, rgba(153,227,247,1) 92%, rgba(153,227,247,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#99e3f7', GradientType=0 );form.Microsoft.gradient( startColorstr='#82c2d3', endColorstr='#e4f3f7', GradientType=0 );r: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4f3f7', endColorstr='#82c2d3', GradientType=1 );
    */

    /* for rounded corners: */
    border-radius: 10px 10px 10px 10px;
    -moz-border-radius: 10px 10px 10px 10px;
    -webkit-border-radius: 10px 10px 10px 10px;
    border: 0px solid #000000;
}

.animalListInfo {
    border: solid 1px black;
}

.privateBetaPage {
    padding: 20px;
    margin: 20px;
}

.loginPage {
    padding: 20px;
    margin: 20px;
}

.takePhotoButton {
    display: inline;
}

.addPhotoFileInput {
    display: none;
    visibility: hidden;
}

.GroupActionsBox {
    margin: 10px;
}

.padding {
    margin: 2px;
    padding: 5px;
}

.animalImg {
    width: 100px;
    height: 100px;
    margin: 5px;
}

.animalInfo {
    text-align: left;
}

.animalThumbnailText {
    font-size: 13px;
    text-align: left;
}

.animalThumbnailImg {
    width: 75px;
    height: 75px;
}

.shelterResult {
    width: 100%;
}

.center-cropped-image {
  width: 100px;
  height: 100px;
  background-position: center center;
  background-repeat: no-repeat;
}

.navbar-custom>li {
    display: inline-block;
    float: left;
}

.navbar-right {
    margin: 0;
    position: absolute;
    right: 0;
    top: 0;
}

.navbar-right > li {
    display: inline-block;
    margin-top: 4px;
}

